--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,13 +24,14 @@
       android:id="@+id/band_info"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="fkjsdlfkjsldkfjlkdsjflksdjflksdjflkjsdlfkjlsdkjflksdjflkjslkdfjlsdfsdfsfdsfsdfsdfsdfdsfdsfsdffdsfsdfsdfdsfdsfdsfsdfsdfsdfsdfdsfsdfsf"
-      android:textColor="@color/colorAccent"
+      android:text="@string/band_text_info"
+      android:textColor="@color/colorWhite"
       android:textAlignment="center"
-      android:textSize="90sp"
+      android:textSize="30sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/imageView" />
+      app:layout_constraintTop_toBottomOf="@id/imageView"
+      android:visibility="gone"/>
   </android.support.constraint.ConstraintLayout>
 </android.widget.ScrollView>
