--- a/app/src/main/res/layout-land/container.xml
+++ b/app/src/main/res/layout-land/container.xml
@@ -5,7 +5,7 @@
   android:id="@+id/container"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".presentation.show_home.view.MainActivity">
+  tools:context=".presentation.MainActivity">
 
   <TextView
     android:id="@+id/text_app_name"
@@ -15,15 +15,16 @@
     android:textColor="@color/colorAccent"
     android:textAlignment="center"
     android:textSize="45sp"
-    app:layout_constraintBottom_toTopOf="@id/content"
+    app:layout_constraintBottom_toTopOf="@id/viewpager"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-  <FrameLayout
-    android:id="@+id/content"
+
+  <android.support.v4.view.ViewPager
+    android:id="@+id/viewpager"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -32,8 +33,6 @@
     app:layout_constraintStart_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/text_app_name"
-    >
-
-  </FrameLayout>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.constraint.ConstraintLayout>
