--- a/app/src/main/res/layout-land/card_row.xml
+++ b/app/src/main/res/layout-land/card_row.xml
@@ -65,6 +65,7 @@
     app:layout_constraintGuide_percent="0.5" />
 
   <android.support.v7.widget.AppCompatImageView
+    android:id="@+id/ticket_image"
     android:layout_width="50dp"
     android:layout_height="50dp"
     app:layout_constraintBottom_toTopOf="@id/guidelineH"
@@ -76,6 +77,7 @@
     app:srcCompat="@drawable/info" />
 
   <android.support.v7.widget.AppCompatTextView
+    android:id="@+id/ticket_title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Sobre Nosotros"
