--- a/app/src/main/res/layout-land/card_row.xml
+++ b/app/src/main/res/layout-land/card_row.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="309dp"
@@ -66,8 +65,11 @@
 
   <android.support.v7.widget.AppCompatImageView
     android:id="@+id/ticket_image"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:maxWidth="50dp"
+    android:scaleType="centerCrop"
+    android:adjustViewBounds ="true"
     app:layout_constraintBottom_toTopOf="@id/guidelineH"
     app:layout_constraintEnd_toStartOf="@+id/guideline"
     app:layout_constraintHorizontal_bias="0.5"
@@ -83,7 +85,7 @@
     android:text="Sobre Nosotros"
     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
     android:textColor="@color/colorWhite"
-    android:textSize="20dp"
+    android:textSize="22sp"
     app:layout_constraintBottom_toTopOf="@id/guidelineH"
     app:layout_constraintStart_toEndOf="@+id/guidelineMargin"
     app:layout_constraintTop_toBottomOf="@+id/guidelineHTop" />
