--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
@@ -8,23 +7,22 @@
   android:background="@drawable/rock_background"
   tools:context=".presentation.MainActivity">
 
-<android.support.design.widget.CoordinatorLayout
-  android:id="@+id/coordinatorLayout"
-  android:layout_above="@+id/bottom_navigation"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/coordinatorLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_above="@+id/bottom_navigation">
+    <include layout="@layout/container" />
 
-  <include layout="@layout/container" />
-
-</android.support.design.widget.CoordinatorLayout>
+  </android.support.design.widget.CoordinatorLayout>
   <android.support.design.widget.BottomNavigationView
     android:id="@+id/bottom_navigation"
-    android:layout_alignParentBottom="true"
     android:layout_width="match_parent"
     android:layout_height="56dp"
+    android:layout_alignParentBottom="true"
+    app:elevation="8dp"
     app:itemBackground="@color/colorPrimaryDark"
     app:itemIconTint="@drawable/nav_item_colors"
     app:itemTextColor="@drawable/nav_text_colors"
-    app:elevation="8dp"
     app:menu="@menu/navigation" />
 </RelativeLayout>
