--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -56,25 +56,26 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_percent="0.1" />
-
   <android.support.constraint.Guideline
     android:id="@+id/guidelineH"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_percent="0.5" />
-
   <android.support.v7.widget.AppCompatImageView
     android:id="@+id/ticket_image"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:maxWidth="50dp"
+    android:scaleType="centerCrop"
+    android:adjustViewBounds ="true"
     app:layout_constraintBottom_toTopOf="@id/guidelineH"
     app:layout_constraintEnd_toStartOf="@+id/guideline"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toEndOf="@+id/guidelineStart"
     app:layout_constraintStart_toStartOf="@id/guidelineStart"
     app:layout_constraintTop_toBottomOf="@+id/guidelineHTop"
-    app:srcCompat="@drawable/info" />
+    app:srcCompat="@drawable/track" />
 
   <android.support.v7.widget.AppCompatTextView
     android:id="@+id/ticket_title"
@@ -83,7 +84,7 @@
     android:text="Sobre Nosotros"
     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
     android:textColor="@color/colorWhite"
-    android:textSize="20dp"
+    android:textSize="22sp"
     app:layout_constraintBottom_toTopOf="@id/guidelineH"
     app:layout_constraintStart_toEndOf="@+id/guidelineMargin"
     app:layout_constraintTop_toBottomOf="@+id/guidelineHTop" />
