--- a/app/src/main/res/layout-land/card_row.xml
+++ b/app/src/main/res/layout-land/card_row.xml
@@ -7,6 +7,8 @@
   android:layout_marginBottom="30dp"
   android:layout_marginLeft="20dp"
   android:layout_marginRight="20dp"
+  android:clickable="true"
+  android:focusable="true"
   app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
   <com.vipulasri.ticketview.TicketView
@@ -76,6 +78,8 @@
     app:layout_constraintStart_toEndOf="@+id/guidelineStart"
     app:layout_constraintStart_toStartOf="@id/guidelineStart"
     app:layout_constraintTop_toBottomOf="@+id/guidelineHTop"
+    android:clickable="true"
+    android:focusable="true"
     app:srcCompat="@drawable/info" />
 
   <android.support.v7.widget.AppCompatTextView
