--- a/app/src/main/res/layout/activity_disks.xml
+++ b/app/src/main/res/layout/activity_disks.xml
@@ -17,7 +17,7 @@
 
   </android.support.design.widget.CoordinatorLayout>
   <android.support.design.widget.BottomNavigationView
-    android:id="@+id/bottom_navigation"
+    android:id="@+id/disk_bottom_navigation"
     android:layout_alignParentBottom="true"
     android:layout_width="match_parent"
     android:layout_height="56dp"
