--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -24,6 +24,8 @@
     android:id="@+id/notification_text_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp"
     android:text="@string/text_notifications"
     android:textColor="#ffffff"
     android:textAlignment="center"
