--- a/app/src/main/res/menu/disk_navigation.xml
+++ b/app/src/main/res/menu/disk_navigation.xml
@@ -3,7 +3,7 @@
   <item
     android:id="@+id/navigation_stars"
     android:icon="@drawable/star"
-    android:title="@string/stars" />
+    android:title="@string/title_stars" />
 
   <item
     android:id="@+id/navigation_songs"
