--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -10,13 +10,22 @@
     <item name="coordinatorLayoutStyle">@style/Widget.Design.CoordinatorLayout</item>
     <!-- This line is the reason of this file -->
     <item name="android:windowContentTransitions">true</item>
+    <item name="android:windowAllowEnterTransitionOverlap">true</item>
+    <item name="android:windowAllowReturnTransitionOverlap">true</item>
+    <item name="android:windowBackground">@drawable/background</item>
   </style>
 
   <style name="AppTheme.NoActionBar">
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/colorAccent</item>
     <item name="coordinatorLayoutStyle">@style/Widget.Design.CoordinatorLayout</item>
+    <!-- This line is the reason of this file -->
     <item name="android:windowContentTransitions">true</item>
     <item name="android:windowAllowEnterTransitionOverlap">true</item>
     <item name="android:windowAllowReturnTransitionOverlap">true</item>
+    <item name="android:windowBackground">@drawable/background</item>
   </style>
 
 </resources>
