add circular reveal and fixes for lower apis versions

--- a/app/src/main/res/drawable-v23/cd_view.xml
+++ b/app/src/main/res/drawable-v23/cd_view.xml
@@ -1,24 +1,34 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- larger circle at the back-->
-  <item android:gravity="center">
-    <shape android:shape="oval">
-      <solid android:color="#ffffff" />
-      <stroke
-        android:color="#ffffff"
-        android:width="8dp" />
-    </shape>
-  </item>
-  <item android:gravity="center">
+  <item
+    android:gravity="center"
+    android:height="160dp"
+    android:width="160dp">
     <shape android:shape="oval">
       <solid android:color="#00000000" />
       <stroke
         android:color="#000000"
-        android:width="99dp" />
+        android:width="65dp" />
     </shape>
   </item>
 
   <!--inner circle -->
-  <item android:gravity="center">
+  <item
+    android:gravity="center"
+    android:height="160dp"
+    android:width="160dp">
+    <shape android:shape="oval">
+      <solid android:color="#00000000" />
+      <stroke
+        android:color="#ffffff"
+        android:width="5dp" />
+    </shape>
+  </item>
+
+  <item
+    android:gravity="center"
+    android:height="35dp"
+    android:width="35dp">
     <shape android:shape="oval">
       <solid android:color="#00000000" />
       <stroke
