--- a/app/src/main/res/layout-v21/card_row.xml
+++ b/app/src/main/res/layout-v21/card_row.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_width="309dp"
+  android:layout_width="match_parent"
   android:layout_height="160dp"
   android:layout_marginTop="30dp"
   android:layout_marginBottom="30dp"
@@ -37,13 +38,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    app:layout_constraintGuide_percent="0.01" />
+    app:layout_constraintGuide_percent="0.034" />
   <android.support.constraint.Guideline
     android:id="@+id/guideline"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    app:layout_constraintGuide_percent="0.28" />
+    app:layout_constraintGuide_percent="0.284" />
 
   <android.support.constraint.Guideline
     android:id="@+id/guidelineMargin"
@@ -57,14 +58,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_percent="0.1" />
-
   <android.support.constraint.Guideline
     android:id="@+id/guidelineH"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_percent="0.5" />
-
   <android.support.v7.widget.AppCompatImageView
     android:id="@+id/ticket_image"
     android:layout_width="wrap_content"
@@ -75,8 +74,8 @@
     app:layout_constraintBottom_toTopOf="@id/guidelineH"
     app:layout_constraintEnd_toStartOf="@+id/guideline"
     app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toEndOf="@+id/guidelineStart"
-    app:layout_constraintStart_toStartOf="@id/guidelineStart"
+    app:layout_constraintStart_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/guidelineHTop"
     android:clickable="true"
     android:focusable="true"
