--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,7 +7,7 @@
 
   <android.support.v7.widget.RecyclerView
     android:id="@+id/recycler_view_dashboard"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="bottom|center_horizontal"
     android:scrollbars="vertical"
