--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -13,6 +13,7 @@
     <item name="android:windowAllowEnterTransitionOverlap">true</item>
     <item name="android:windowAllowReturnTransitionOverlap">true</item>
     <item name="android:windowBackground">@drawable/background</item>
+    <item name="cardViewStyle">@style/CardView</item>
   </style>
 
   <style name="AppTheme.NoActionBar">
@@ -25,7 +26,18 @@
     <item name="android:windowContentTransitions">true</item>
     <item name="android:windowAllowEnterTransitionOverlap">true</item>
     <item name="android:windowAllowReturnTransitionOverlap">true</item>
+
     <item name="android:windowBackground">@drawable/background</item>
+    <item name="cardViewStyle">@style/CardView</item>
+  </style>
+
+  <style name="SeekBarTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">#ef0e0e</item>
+    <item name="coordinatorLayoutStyle">@style/Widget.Design.CoordinatorLayout</item>
+    <item name="cardViewStyle">@style/CardView</item>
   </style>
 
 </resources>
