--- a/app/src/main/res/layout-land/bullero.xml
+++ b/app/src/main/res/layout-land/bullero.xml
@@ -36,12 +36,14 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/song_info_title"/>
 
+  <!--https://stackoverflow.com/questions/7404100/how-to-fix-seekbar-bar-thumb-centering-issues-->
     <SeekBar
       android:id="@+id/song_progressbar"
       android:layout_marginStart="5dp"
       android:layout_marginEnd="5dp"
       android:layout_width="0dp"
       android:layout_height="match_parent"
+      android:maxHeight="1000dp"
       android:layout_weight="1"
       android:clickable="true"
       android:focusable="true"
