--- a/app/src/main/res/layout/bullero.xml
+++ b/app/src/main/res/layout/bullero.xml
@@ -78,13 +78,13 @@
   </LinearLayout>
   <LinearLayout
     android:id="@+id/progress_controls"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:layout_below="@+id/main_controls"
     android:paddingStart="15dp"
     android:paddingEnd="15dp"
-    android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:layout_marginBottom="10dp"
-    android:orientation="horizontal"
-    android:layout_below="@+id/main_controls">
+    android:orientation="horizontal">
 
     <TextView
       android:id="@+id/song_progress_current"
@@ -96,18 +96,19 @@
       android:lines="1"
       android:text="00:00"
       android:textColor="@android:color/white"
-      android:textSize="15sp"/>
+      android:textSize="15sp" />
 
     <SeekBar
       android:id="@+id/song_progressbar"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1"
-      android:gravity="center"
       android:clickable="true"
       android:focusable="true"
-      android:theme="@style/SeekBarTheme"
-      android:src="@drawable/play_btn"/>
+      android:gravity="center"
+      android:maxHeight="1000dp"
+      android:src="@drawable/play_btn"
+      android:theme="@style/SeekBarTheme" />
 
     <TextView
       android:id="@+id/song_progress_max"
@@ -119,7 +120,7 @@
       android:lines="1"
       android:text="00:00"
       android:textColor="@android:color/white"
-      android:textSize="15sp"/>
+      android:textSize="15sp" />
 
   </LinearLayout>
 
