--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -1,95 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_width="match_parent"
-  android:layout_height="160dp"
-  android:layout_marginTop="30dp"
-  android:layout_marginBottom="30dp"
-  android:layout_marginLeft="20dp"
-  android:layout_marginRight="20dp"
-  android:clickable="true"
-  android:focusable="true"
-  app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-  <com.vipulasri.ticketview.TicketView
-    android:id="@+id/ticketView"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:backgroundColor="#000000"
-    app:borderColor="#ffffff"
-    app:cornerRadius="15dp"
-    app:cornerType="rounded"
-    app:dividerColor="#ffffff"
-    app:dividerDashGap="1dp"
-    app:dividerDashLength="2dp"
-    app:dividerPadding="0dp"
-    app:dividerType="dash"
-    app:dividerWidth="1dp"
-    app:orientation="vertical"
-    app:scallopPositionPercent="25"
-    app:scallopRadius="5dp"
-    app:showBorder="true"
-    app:showDivider="true"
-    app:ticketElevation="14dp" />
-
-  <android.support.constraint.Guideline
-    android:id="@+id/guidelineStart"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:layout_constraintGuide_percent="0.034" />
-  <android.support.constraint.Guideline
-    android:id="@+id/guideline"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:layout_constraintGuide_percent="0.284" />
-
-  <android.support.constraint.Guideline
-    android:id="@+id/guidelineMargin"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:layout_constraintGuide_percent="0.33" />
-  <android.support.constraint.Guideline
-    android:id="@+id/guidelineHTop"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    app:layout_constraintGuide_percent="0.1" />
-  <android.support.constraint.Guideline
-    android:id="@+id/guidelineH"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    app:layout_constraintGuide_percent="0.5" />
-  <android.support.v7.widget.AppCompatImageView
-    android:id="@+id/ticket_image"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:maxWidth="50dp"
-    android:scaleType="centerCrop"
-    android:adjustViewBounds ="true"
-    app:layout_constraintBottom_toTopOf="@id/guidelineH"
-    app:layout_constraintEnd_toStartOf="@+id/guideline"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toEndOf="@+id/guidelineStart"
-    app:layout_constraintStart_toStartOf="@id/guidelineStart"
-    app:layout_constraintTop_toBottomOf="@+id/guidelineHTop"
+    android:layout_height="160dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
     android:clickable="true"
     android:focusable="true"
-    app:srcCompat="@drawable/track" />
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-  <android.support.v7.widget.AppCompatTextView
-    android:id="@+id/ticket_title"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
-    android:textColor="@color/colorWhite"
-    android:textSize="30sp"
-    app:layout_constraintBottom_toTopOf="@id/guidelineH"
-    app:layout_constraintStart_toEndOf="@+id/guidelineMargin"
-    app:layout_constraintTop_toBottomOf="@+id/guidelineHTop" />
+    <com.vipulasri.ticketview.TicketView
+        android:id="@+id/ticketView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:backgroundColor="#000000"
+        app:borderColor="#ffffff"
+        app:cornerRadius="15dp"
+        app:cornerType="rounded"
+        app:dividerColor="#ffffff"
+        app:dividerDashGap="1dp"
+        app:dividerDashLength="2dp"
+        app:dividerPadding="0dp"
+        app:dividerType="dash"
+        app:dividerWidth="1dp"
+        app:orientation="vertical"
+        app:scallopPositionPercent="25"
+        app:scallopRadius="5dp"
+        app:showBorder="true"
+        app:showDivider="true"
+        app:ticketElevation="14dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.034" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.284" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineMargin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.35" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineHTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/ticket_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:clickable="true"
+        android:focusable="true"
+        android:maxWidth="50dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@id/guidelineH"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
+        app:layout_constraintStart_toStartOf="@id/guidelineStart"
+        app:layout_constraintTop_toBottomOf="@+id/guidelineHTop"
+        app:srcCompat="@drawable/track" />
+
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/ticket_title"
+        android:layout_width="175dp"
+        android:paddingTop="10dp"
+        android:layout_height="match_parent"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        android:textColor="@color/colorWhite"
+        android:textSize="30sp"
+        android:textAlignment="viewStart"
+        app:layout_constraintBottom_toTopOf="@id/guidelineH"
+        app:layout_constraintStart_toEndOf="@+id/guidelineMargin"
+        app:layout_constraintTop_toBottomOf="@+id/guidelineHTop" />
 
 </android.support.constraint.ConstraintLayout>
